--- a/r/rmd/loi.rmd
+++ b/r/rmd/loi.rmd
@@ -1,10 +1,12 @@
 ---
 title: "Letter of Intent"
-author: 
+author:
 - Zhenkai Zhu, The University of Connecticut
 - Rajesh Sahasrabuddhe, Oliver Wyman Actuarial Consulting, Inc.
 output:
-  pdf_document
+  pdf_document: default
+  html_document:
+    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
@@ -28,50 +30,44 @@ We believe that actuaries supporting the evaluation and negotiation commercial i
 
 
 ## Literature Review
-authors and titles in the literature review  
 Most of research in this area focuses on the insurer's return on capital rather than the insured's capital. We identified and reviewed the following papers in our literature review:
 
-[Demand of Insurance under the Cost-of-Capital Premium Calculation Principle]
 
+[Macalaster, Spencer. Insurance as a Form of Capital. January 12, 2015](https://www.insurancejournal.com/magazines/mag-closingquote/2015/01/12/353262.htm) 
+described the issue conceptually but without measurement and does not mention the role of the actuary in establishing reserves.
 
-[Macalaster, Spencer.  Insurance as a Form of Capital. January 12, 2015](https://www.insurancejournal.com/magazines/mag-closingquote/2015/01/12/353262.htm) described the issue conceptually but without measurement and does not mention the role of the actuary in establishing reserves.
+[Arrow, K.J. Essays in the Theory of Risk Bearing; Markham: Chicago, IL, USA, 1971.](https://content.ebscohost.com/ContentServer.asp?T=P&P=AN&K=5054063&S=R&D=bth&EbscoContent=dGJyMNXb4kSeqa440dvuOLCmsEieqK5Ss664TbOWxWXS&ContentCustomer=dGJyMPGut1C0rLNRuePfgeyx83vt5OyF39%2Fs) 
+Arrow's theorem is the cornerstone of the application of expected-ulitily theory in insurance
 
-[Arrow, K.J. Uncertainty and the welfare economics of medical care. Am. Econ. Rev. 1963, 53,
-941–973.](www.uconn.edu)
+[Raviv, A. The design of optimal insurance policy. Am. Econ. Rev. 1979, 69, 84–96.](https://www.jstor.org/stable/1802499) 
+uses utility theory to measure value for an insured.
 
-[Arrow, K.J. Essays in the Theory of Risk Bearing; Markham: Chicago, IL, USA, 1971.](www.uconn.edu)
+[Gollier, C. Optimum insurance of approximate losses. J. Risk Insur. 1996, 63, 369–380.](https://www.jstor.org/stable/253617) 
+also use utility theory to measure optimize the insured retentions.
 
+[Yaari, M. The dual theory of choice under risk. Econometrica 1987, 55, 95–115.](https://www.jstor.org/stable/1911158) 
+the modification of epected utility theory
 
-[Raviv, A. The design of optimal insurance policy. Am. Econ. Rev. 1979, 69, 84–96.](https://www.jstor.org/stable/1802499) uses utility theory to measure value for an insured.
+[Kai A. Konrad; Stegrios Skaperds. Self-Insurance and Self-Protection: A Nonexpected Utility Analysis. The Geneva Papers on Risk and Insurance Theory, 1993-12, Vol.18 (2), p.131-146](https://www.jstor.org/stable/41953283) 
+use rank-dependent expected utility preferences to measure value for an insured
 
-[Gollier, C. Optimal insurance of approximate losses. J. Risk Insur. 1996, 63, 369–380.](https://www.jstor.org/stable/253617) also use utility theory to measure optimize the insured retentions.
+[Christophe Courbage. Self-Insurance, Self-Protection and Market Insurance within the Dual Theory of Choice. The Geneva papers on risk and insurance theory, 2001-06-01, Vol.26 (1), p.43-56](https://www.researchgate.net/publication/5221351_Self-Insurance_Self-Protection_and_Market_Insurance_within_the_Dual_Theory_of_Choice_In_The_Geneva_Papers_on_Risk_and_Insurance_Theory_26_1_43-56) 
+use dual theory to measure value for an insured 
 
-[Gollier, C.; Schlesinger, H. Arrow’s theorem on the optimality of deductibles: A stochastic
-dominance approach. Econ. Theory 1996, 7, 359–363.](www.uconn.edu)
+[Michael Merz; Mario V. Wüthrich, "Demand of Insurance under the Cost-of-Capital Premium Calculation Principle", Risks, 2014, Vol.2(2), 226-248](https://www.mdpi.com/2227-9091/2/2/226/htm) 
+use risk premium approach to measure value for an insured
 
-[Yaari, M. The dual theory of choice under risk. Econometrica 1987, 55, 95–115.](www.uconn.edu)
+[Bernard, C.; He, X.D.; Yan, J.-A.; Zhou, X.Y. Optimal insurance design under rank-dependent expected utility. In Mathematical Finance; SSRN Preprint: Waterloo, Canada, 2014.](https://www.researchgate.net/publication/228293026_Optimal_Insurance_Design_Under_Rank-Dependent_Expected_Utility)
+use rank-dependent expected utility theory to measure value for an insured too
 
-[Bernard, C.; He, X.D.; Yan, J.-A.; Zhou, X.Y. Optimal insurance design under rank-dependent expected utility. In Mathematical Finance; SSRN Preprint: Waterloo, Canada, 2014.](www.uconn.edu)
+[Laury, S.; M. Mcinnes, and J.Swarthout(2009): Insurance Decisions for Low-Probability Losses, J. Risk Uncertainty 39, 17–44.](https://www.researchgate.net/publication/225581818_Insurance_Decisions_for_Low_Probability_Losses) 
+use experimental evidence to show individual's under-insure decision for low-probability high-loss events  
 
-[Swiss Solvency Test. FINMA SST Technisches Dokument, Version 2; Swiss Solvency Test: Bern, Switzerland, October 2006.](www.uconn.edu)
-
-[Wüthrich, M.V.; Bühlmann, H.; Furrer, H. Market-Consistent Actuarial Valuation, 2nd ed.; Springer: Berlin/Heidelberg, Germany, 2010.](www.uconn.edu)
-
-[Wüthrich, M.V.; Merz, M. Financial Modeling, Actuarial Valuation and Solvency in Insurance; Springer: Berlin/Heidelberg, Germany, 2013.](www.uconn.edu)
-
-[McNeil, A.J.; Frey, R.; Embrechts, P. Quantitative Risk Management: Concepts, Techniques and Tools; Princeton University Press: Princeton, NJ, USA, 2005.](www.uconn.edu)
-
-[Asimit, A.V.; Vernic, R.; Zitikis, R. Evaluating risk measures and capital allocations based on multi-losses driven by a heavy-tailed background risk: The multivariate Pareto-II model. Risks 2013, 1, 14–33.](www.uconn.edu)
-
-[Fortuin, C.M.; Kasteleyn, P.W.; Ginibre, J. Correlation inequalities on some partially ordered sets. Commun. Math. Phys. 1971, 22, 89–103.](www.uconn.edu)
-
-[Kamien, M.I.; Schwartz, N.L. Sufficient conditions in optimal control theory. J. Econ. Theory 1971, 3, 207–214.](www.uconn.edu)
-
-[Pelsser, A. Pricing in Incomplete Markets; Netspar Panel Papers, Volume 25; Tilburg University, The Netherlands, 2011.](www.uconn.edu)
-
+[Kunreuther, H.; Pauly, M. (2004). Neglecting disaster: Why don’t people insure against large losses? Journal of Risk and Uncertainty, 28, 5–21.](https://www.jstor.org/stable/41761127) 
+use uitlity theory to show the reason why individuals don't insure low-probability and high-loss events
 
 ## Funding
-a rough estimate of the funding requirements, 
+* The rough estimate of our funding requirement would be $15,000.
 
 ## Other
 * Will provide a practical worked example with our research. We will construct the "data" and actuarial assumptions included in that example.    
@@ -80,6 +76,7 @@ a rough estimate of the funding requirements,
 ## Author Information
 * Rajesh Sahasrabuddhe is a Fellow of the Casualty Actuarial Society, an Associate of the Canadian Institute of Actuaries and a Member of the American Academy of Actuaries. He has been providing actuarial consulting services since 1995 and is an active CAS volunteer. In addition to several papers that appear in the CAS Forum, he has co-authored a paper that appears in Variance. (That paper was selected for the Variance prize.)
 
+* Zhenkai Zhu is a master student studying at the University of Connecticut, pursuing the associate of Society of Actuary. 
 
 
 will The ability of the applicant(s) to access any data needed, where the applicant(s) intend to present and publish, and the qualifications (including any actuarial designations and any relevant experience in industry) of the applicant(s)
