--- a/r/rmd/loi.rmd
+++ b/r/rmd/loi.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Letter of Intent"
+title: "Committee on Knowledge Extension Research (CKER)  \n2021 Individual Grants Competition  \nLetter of Intent"
 author:
 - Zhenkai Zhu, The University of Connecticut
 - Rajesh Sahasrabuddhe, Oliver Wyman Actuarial Consulting, Inc.
