--- a/paper/1.0 introduction.Rmd
+++ b/paper/1.0 introduction.Rmd
@@ -1,11 +1,10 @@
 # Introduction
 
-Commercial insurance programs are often depicted as "towers." (See Figure \ref{fig:tower}) The lowest floors of the tower are typically comprised of retained risk. The middle floors include commercially insured working layers. The "penthouse" is generally high-layer excess insurance. Each of those layers has a cost to it.
+Commercial insurance programs are often depicted as "towers." (See Figure \ref{fig:tower}) The lowest floors of the tower are typically comprised of risk retained by the insured. The middle floors include commercially insured working layers. The "penthouse" is generally high-layer excess insurance. Each of these layers has a cost to it.
 
--   The cost of the lowest layers will have a reasonable degree of predictability. The cost for this layer will be principally be the expected loss with a minimal capital charge volatility. There may also be frictional costs associated with risk retention such as increased audit and actuarial fees and claims administration costs from legal counsel and third party claim administrators.
--   The middle layers will provide coverage for claims with a degree of regularity. The amount of claims may not be reasonably predictable in a single year but it would be predictable over a longer-term time horizon. They insurance coverage provides value to the insured by smoothing claim volatility over time. There may be multiple insurers in the higher working layers.
--   Insureds may not expect to ever require coverage from the highest layers. The expected claims will likely be close to \$0. The coverage does not smooth claims volatility for the insured over time but rather smooths claim volatility across insured risks. There are often multiple insurers in this layer, each with a pro-rata share. Yet, there will be a cost to this layer. In this paper we explore the *value* of the coverage in this layer. Measuring this value provides the insurer a basis upon which to assess the cost established by the insurer.
-
+-   The cost of the lowest layers will have a reasonable degree of predictability. The cost for these layers will be principally be the expected loss with a minimal capital charge volatility. There may also be frictional costs associated with risk retention such as increased audit and actuarial fees and claims costs from legal counsel and third party claim administrators.
+-   The middle layers provide coverage for claims related to events that occur with a degree of regularity. The amount of claims may not be reasonably predictable in a single year but it would be predictable over a longer-term time horizon. They insurance coverage provides value to the insured by smoothing claim volatility over time. There may be multiple insurers in the higher working layers.
+-   Insureds generally do not expect access coverage from the highest layers. The expected claims will likely be close to \$0. The coverage does not smooth claims volatility for the insured over time but rather smooths claim volatility across insured risks. There are often multiple insurers in these layers, each with a pro-rata share. 
 
 ```{r insurance tower, echo=FALSE, fig.height=5, fig.width=5, fig.cap= "\\label{fig:tower}Example Insurance Tower"}
 par(mar = c(1, 1, 1, 1))
