Added company money-raising method

--- a/paper/3.0 capital.Rmd
+++ b/paper/3.0 capital.Rmd
@@ -88,12 +88,15 @@ X_c=\left\{
              0 & X=0\\
              X & 0< X\leq Res\\
              Res+F_1\ (X-Res) , & Res< X\leq Res+C_w\\
-             Res+F_1\ (X-Res)+F_2\ (X-Res-S) , & Res< X\leq S\\
+             Res+F_1\ (X-Res)+F_2\ (X-Res-C_w) , & Res< X\leq S\\
              Bankrupt &X>S  
              \end{array}
 \right.
 $$
 \
+The Capital would get both a F1 and F2 penalty when its loss is over (reserve + working capital), F1 and F2 are independent.
+Here an assumption is used to simplify the problem (the company would start to loss it fixed assets after losing all its working capital, which is not inconsistent with reality)
+
 
 After refining some concepts, $C_w=C-Res-Fixed\ Assets$
 
@@ -107,16 +110,23 @@ $\Delta C=R-Z$, $ROC=\frac{R-Z}{C}$
 
 $\Delta C=R-Z-X_c$, $ROC=\frac{R-Z-X_c}{C}$
 
-If the loss is at a high amount and over the $C_m$, company may choose to recapitalize.
-In definition, Recapitalization is adding debt/equity to adjust their proportion to capital.Company can issue stock to buy back debt securities to decrease the debt proportion, or issue debt and use the cash to buy back shares to increase the debt proportion.
+If the excess loss happens, company's debt would increase rapidly. 
+There are the following 3 methods can help company overcome the high debt.
 
-If the excess loss happens, company's debt would increase rapidly. Company can issue stock to buy back debt. However, recapitalization is often used to get optimal debt capacity, I'm not sure whether it applies here.
+1) Debt Restructuring
+The debt restructuring process typically involves reducing the interest rates on loans, extending the dates when the company’s liabilities are due to be paid, or both. These steps improve the firm’s chances of paying back the obligations. Creditors understand that they would receive even less should the company be forced into bankruptcy or liquidation.
+Debt restructuring can be a win-win for both entities because the business avoids bankruptcy, and the lenders typically receive more than what they would through a bankruptcy proceeding.
 
-Bankrupt reorganization may be a alternative method. A business in the midst of filing Chapter 11 of bankrupt may continue to operate. In most cases the business can run the business as usual. Bankrupt reorganization is one of the most expensive and complex form of bankruptcy
+2) Reorganization
+Federal bankruptcy laws govern how companies go out of business or recover from crippling debt.
+Ch11/13 Reorganization
+Ch7 Liquidate
+The reorganization is not the real bankrupt. It allows companies to pay off their creditors and emerge from bankruptcy in a stronger position. It is more like a buffer before the liquidates to keep the company continue its day-to-day operation and try to become profitable again. 
 
-3 bankruptcy
-
-bankruptcy itself would be a result, which could be discussed in detail if needed.
+3) If the company’s debt situation is not so severe. There are several ways for companies to raise money.
+1.If the company is a public company, it can issue stocks or bonds. 
+2.If the company is a nonpublic company, borrowing money from banks would be a more common way.
+One thing to note, after a high layer loss, the company’s operation could be affected and have a more chance to bankrupt, its stock price would decrease, its bond rating may decrease (which means it needs to pay higher interest for the bonds issued), the bank may reject or charge a higher interest rate when lending money to you.
 
 
 
